# hubble

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml
.sqlx/: query-68d2898c2cb59a7d2772db0bd0dad6a25fe345086b02501d7026767444b664e9.json  query-a21f2a09c4fd869ea428d2aa243167753bf8d41636b50f4c9552557a4f875d82.json  query-d9bb57be292935a773837aa0c9304e6e2493a050057cb68529eae2fb02b70c2f.json  query-db5be96fc87ba739cb39fd6ffc17c03e59fa357f26ef7c7feb187a982144800b.json
migrations/: 20250125075539_init.sql  20250126115559_indexes.sql
src/: id.rs  index.rs  kind.rs  main.rs
src/graphql/: episode.rs  mod.rs  title.rs
src/sync/: ensure_file.rs  file_meta.rs  import_file.rs  importer.rs  mod.rs  nullable.rs  update_index.rs
src/sync/importers/: akas.rs  basics.rs  episodes.rs  mod.rs  ratings.rs
