[package]
name = "hubble"
version = "0.1.0"
edition = "2021"
default-run = "hubble"

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.84"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
dotenv = "0.15.0"
reqwest = { version = "0.12.12", features = ["stream"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
serde_with = "3.12.0"
itertools = "0.14.0"
roaring = "0.10.10"
tantivy = "0.22.0"
async-graphql = { version = "7.0.14", features = ["dataloader"] }
async-graphql-axum = "7.0.14"
csv-async = { version = "1.3.0", features = ["tokio"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
axum = "0.8.1"
