[package]
name = "hubble"
version = "0.1.0"
edition = "2021"
default-run = "hubble"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3"
tracing = "0.1"
dotenv = "0.15"
reqwest = { version = "0.12", default-features = false, features = [
    "stream",
    "rustls-tls",
] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
serde_with = "3.12"
itertools = "0.14"
roaring = "0.10"
tantivy = "0.22"
async-graphql = { version = "7", features = ["dataloader"] }
async-graphql-axum = "7"
csv-async = { version = "1.3", features = ["tokio"] }
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
axum = "0.8"
